<resources>
    <string name="app_name">MyApp</string>
    <string name="login_text">Вход</string>
    <string name="login_btn">Войти</string>
    <string name="next_btn">Далее</string>
    <string name="sign_text">Регистрация</string>
    <string name="ok_btn">ОК</string>
    <string name="sign_btn">Зарегистрироваться</string>
    <string name="email_hint">Электронный адрес</string>
    <string name="password_hint">Пароль</string>
    <string name="name_hint">Как Вас зовут</string>
    <string name="info_text">Укажите пол, имя и, если хотите, добавьте фотографию для Вашего профиля</string>
    <string name="forgot_password_btn">Забыли пароль?</string>
    <string name="info_password_message">Пароль должен состоять более, чем из 6 символов!</string>
    <string name="error_sign_message">Учётная запись с таким email уже существует!</string>
    <string name="error_login_message">Введён неверный пароль или такой учётной записи не существует!</string>
    <string name="warning_login_message">Заполните все поля!</string>
    <string name="welcome_message">Добро пожаловать!</string>
    <string name="welcome_after_sign_message">Регистрация прошла успешно!\nДобро пожаловать!</string>
    <string name="themes_category_title_preference">Настройки темы</string>
    <string name="auto_daynight_title_preference">Автоматическая смена темы дня/ночи</string>
    <string name="auto_daynight_summary_preference">Тёмная тема включится автоматически ночью</string>
    <string name="other_category_title_preference">Другое</string>
    <string name="push_title_preference">Разрешить Push-уведомления</string>
    <string name="theme_title_preference">Выбор темы</string>
    <string name="theme_summary_preference">Устанавливает тему для приложения</string>
    <string name="dialog_message_preference">Выберите тему приложения</string>
    <string name="no_account_text">Вы не вошли в аккаунт</string>
    <string name="male_rbtn">М</string>
    <string name="female_rbtn">Ж</string>
    <string name="change_photo_btn">Сменить фото профиля</string>
    <string name="change_password_btn">Сменить пароль</string>
    <string name="logout_btn">Выйти</string>
    <string name="email_text">Эл. адрес</string>
    <string name="name_text">Имя</string>
    <string name="sex_text">Пол</string>
    <string name="error_message">Произошла непредвиденная ошибка</string>
    <string name="email_verify_message">На вашу почту было отправлено письмо для подтверждения регистрации!</string>
    <string name="email_verify_warning_message">Для входа в приложения необходимо подтвердить регистрацию.\nЗайдите на свою почту!</string>
    <string name="recover_password_warning_message">На вашу почту было отправлено письмо для сброса пароля!</string>
    <string name="empty_email_warning_message">Для восстановления пароля введите адрес электронной почты!</string>
</resources>
