<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_main_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/MainTextView"
            android:text="@string/login_text"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_above="@+id/password_et"
            android:hint="@string/email_hint"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:lineSpacingExtra="5sp"
            android:textStyle="normal"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="16dp"
            android:paddingStart="16dp"
            android:background="@drawable/rounded_view"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentEnd="true"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:hint="@string/password_hint"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:lineSpacingExtra="5sp"
            android:textStyle="normal"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="16dp"
            android:paddingStart="16dp"
            android:background="@drawable/rounded_view"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_alignParentEnd="true"/>

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/show_password_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            app:srcCompat="@drawable/ic_eye"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"/>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_btn"
            android:layout_below="@+id/password_et"
            android:layout_centerHorizontal="true"
            style="@style/MainButton"
            android:background="@drawable/rounded_view"
            app:spinning_bar_width="2dp"
            app:spinning_bar_color="@color/colorSpinningBar"
            app:spinning_bar_padding="6dp"/>

    <Button
            android:id="@+id/forgot_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BorderlessButton"
            android:text="@string/forgot_password_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_btn"/>

</RelativeLayout>