<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sign_part2_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <TextView
            android:id="@+id/sign_part2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/MainTextView"
            android:text="@string/sign_text"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sign_photo_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_adding_photo"
            android:layout_above="@id/sign_name_et"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"/>

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sign_name_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:hint="@string/name_hint"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:lineSpacingExtra="5sp"
            android:textStyle="normal"
            android:paddingStart="16dp"
            android:background="@drawable/rounded_view"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_alignParentEnd="true"/>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/sign_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_btn"
            android:layout_below="@+id/sign_name_et"
            android:layout_centerHorizontal="true"
            style="@style/MainButton"
            android:background="@drawable/rounded_view"
            app:spinning_bar_width="4dp"
            app:spinning_bar_color="@color/colorSpinningBarColor"
            app:spinning_bar_padding="6dp"/>

</RelativeLayout>