<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user_info_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
            android:id="@+id/user_info_scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/user_change_info_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_photo_iv"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/ic_user_photo"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="68dp"
                    android:layout_gravity="center"
                    app:civ_border_width="3dp"
                    app:civ_border_color="@color/colorPrimary"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/user_change_photo_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BorderlessButton"
                    android:text="@string/change_photo_btn"
                    android:textSize="12sp"
                    android:layout_gravity="center"/>

            <LinearLayout
                    android:id="@+id/user_info_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:id="@+id/user_info_tv_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="50dp"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/user_email_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            style="@style/OtherTextView"
                            android:text="@string/email_text"
                            android:textSize="14sp"
                            android:textAllCaps="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="16dp"/>

                    <TextView
                            android:id="@+id/user_name_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            style="@style/OtherTextView"
                            android:text="@string/name_text"
                            android:textSize="14sp"
                            android:textAllCaps="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"/>

                    <TextView
                            android:id="@+id/user_sex_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            style="@style/OtherTextView"
                            android:text="@string/sex_text"
                            android:textSize="14sp"
                            android:textAllCaps="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/user_info_edit_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="50dp"
                        android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/user_email_et"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:fontFamily="sans-serif"
                            android:textSize="15sp"
                            android:lineSpacingExtra="5sp"
                            android:textStyle="normal"
                            android:editable="false"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionDone"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="16dp"/>

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/user_name_et"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:fontFamily="sans-serif"
                            android:textSize="15sp"
                            android:lineSpacingExtra="5sp"
                            android:textStyle="normal"
                            android:editable="false"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionDone"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="16dp"/>

                    <info.hoang8f.android.segmented.SegmentedGroup
                            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/user_sex_segment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            segmentedgroup:sc_border_width="2dp"
                            segmentedgroup:sc_corner_radius="10dp"
                            segmentedgroup:sc_tint_color="@color/colorPrimary">

                        <RadioButton
                                android:id="@+id/male_radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/male_rbtn"
                                style="@style/RadioButton"/>

                        <RadioButton
                                android:id="@+id/female_radiobutton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female_rbtn"
                                style="@style/RadioButton"/>

                    </info.hoang8f.android.segmented.SegmentedGroup>

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/user_change_password_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BorderlessButton"
                    android:text="@string/change_password_btn"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/user_logout_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/BorderlessButton"
                    android:text="@string/logout_btn"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
            layout="@layout/toolbar_user_info"
            android:id="@+id/user_toolbar"/>

</FrameLayout>